--- a/app/src/main/res/layout/fragment_committees.xml
+++ b/app/src/main/res/layout/fragment_committees.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.Committees">
+    tools:context=".ui.home.Committees"
+    android:backgroundTint="@color/secondary"
+    android:padding="@dimen/_16sdp"
+    android:background="@drawable/recshape"
+    >
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/committees_RV"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    />
 
-</FrameLayout>
+    <com.smarteist.autoimageslider.SliderView
+        android:id="@+id/imageSlider"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_140sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:sliderAnimationDuration="200"
+        app:sliderAutoCycleDirection="right"
+        app:sliderAutoCycleEnabled="true"
+        app:sliderIndicatorSelectedColor="@color/msp_orange"
+        app:sliderIndicatorUnselectedColor="@color/msp_blue"
+        app:sliderScrollTimeInSec="2"
+        app:sliderStartAutoCycle="true" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
