--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="msp_dark_blue">#00004b</color>
     <color name="msp_green">#7fba00</color>
     <color name="msp_orange">#f25123</color>
-    <color name="primary">#121212</color>
+    <color name="primary">#121421</color>
+    <color name="secondary">#1B1F30 </color>
     <color name="on_primary">#ffffff</color>
 </resources>
