--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -8,7 +8,7 @@
 <!--        android:id="@+id/page_2"-->
 <!--        android:enabled="true"-->
 <!--        android:icon="@drawable/ic_event"-->
-<!--        android:title="Events"/>-->
+<!--        android:title="Events1"/>-->
     <item
         android:id="@+id/page_2"
         android:enabled="true"
@@ -24,4 +24,9 @@
         android:enabled="true"
         android:icon="@drawable/ic_person"
         android:title="Profile"/>
+    <item
+        android:id="@+id/page_4"
+        android:enabled="true"
+        android:icon="@drawable/ic_event"
+        android:title="Events"/>
 </menu>
